XDrawRectangle

-------------------------------------------------------------------------------

Thu Sep  9 10:06:29 PDT 1999
(Raster)

fix up some stuff (get rid of excess lines of padding)
allow alt-left mosue button drag to work on menus.

-------------------------------------------------------------------------------

Thu Sep  9 10:13:13 PDT 1999
(Raster)

save snap info when iconbox resizes :)

-------------------------------------------------------------------------------

Thu Sep  9 10:45:43 PDT 1999
(Raster)

have E snapshot the size and location of the iconbox when its in 
autoresize mode at its minimum size. :)

-------------------------------------------------------------------------------

Thu Sep  9 15:11:27 PDT 1999
(Mandrake)

added some function prototypes, fixed a merging conflict in kde.c

-------------------------------------------------------------------------------

Thu Sep  9 15:22:47 PDT 1999
(Mandrake)

somehow I lost some of this.  committing again.  (kde stuff for pager)

-------------------------------------------------------------------------------

Thu Sep  9 15:53:02 PDT 1999
(Mandrake)

kpanel's desktop switcher should work now.
still needs some work.

-------------------------------------------------------------------------------

Thu Sep  9 17:38:23 PDT 1999
(Mandrake)

more panel work

-------------------------------------------------------------------------------

Fri Sep 10 14:05:11 PDT 1999
(Raster)

dint get command form windows that are group leaders if the window doesnt 
have a command set on it explicitly.

-------------------------------------------------------------------------------

Fri Sep 10 14:14:11 PDT 1999
(Raster)

try this fix for focus loss (extra check for multihead case)

-------------------------------------------------------------------------------

Fri Sep 10 14:59:58 PDT 1999
(Raster)

more ref count to after discovery of the objetc, not before.. :)